--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "content-based-recommender": "^1.5.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "fast-two-sms": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "tf-idf-search": "^1.1.3"
   }
 }
